# today-google-calendar

./: .clinerules  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.cursor/rules/: about-this-project.mdc
src/: calendar.rs  event.rs  main.rs  token.rs
