[package]
name = "today-google-calendar"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.97"
chrono = "^0.4.0"
chrono-tz = "0.10.3"
ctrlc = "3.4"
dotenv = "0.15.0"
google-calendar3 = "6.0.0"
oauth2 = { version = "^5.0.0", features = ["reqwest-blocking"] }
ratatui = "0.29.0"
reqwest = "0.12.12"
serde = "1.0.218"
serde_json = "1.0.140"
tokio = {version = "1.43.0", features = ["full"]}
urlencoding = "2.1.0"
